Changed folder structures

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/main.css">
-  <link rel="stylesheet" href="./dist/main.css">
+  <link rel="stylesheet" href="./assets/css/main.css">
+  <link rel="stylesheet" href="./vender/dist/main.css">
   <!-- Slick css -->
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-  <link rel="stylesheet" href="slick/slick.css">
-  <link rel="stylesheet" href="slick/slick-theme.css">
+  <link rel="stylesheet" href="vender/slick/slick.css">
+  <link rel="stylesheet" href="vender/slick/slick-theme.css">
   <title>Internet - Startup</title>
 </head>
 
@@ -118,11 +118,11 @@
               src="https://xido-demo.pbminfotech.com/html-demo/demo/images/internet/logo-white.svg" alt="">
           </a>
           <button class="open-nav-btn lg:hidden">
-            <img src="./images/menu-btn.svg" alt="open button for navbar menu" width="35" height="35px">
+            <img src="./assets/images/menu-btn.svg" alt="open button for navbar menu" width="35" height="35px">
           </button>
           <nav class="header-nav pt-[85px] lg:pt-0" style="transform: translateX(150%);">
             <button class="header-nav-close-btn lg:hidden">
-              <img src="./images/close-btn.svg" alt="close button for navbar" width="25" height="25">
+              <img src="./assets/images/close-btn.svg" alt="close button for navbar" width="25" height="25">
             </button>
             <ul class="flex flex-col lg:flex-row lg:items-center lg:gap-x-6">
               <li class="header-nav-item">
@@ -5719,9 +5719,9 @@
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script src="slick/slick.js"></script>
+  <script src="vender/slick/slick.js"></script>
   <!-- Main js -->
-  <script src="./js/main.js"></script>
+  <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
