--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Internet - Startup</title>
-  <link rel="stylesheet" href="./assets/css/main.css">
+  <!-- <link rel="stylesheet" href="./assets/css/main.css"> -->
+  <link rel="stylesheet" href="./assets/css/main.min.css">
   <link rel="stylesheet" href="./vender/dist/main.css">
   <link rel="stylesheet" href="vender/slick/slick.css">
   <link rel="stylesheet" href="vender/slick/slick-theme.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
   <script src="https:/cdnjs.cloudflare.com/ajax/libs/bodymovin/5.9.6/lottie.min.js"></script>
 </head>
 
@@ -152,7 +154,7 @@
                   us</a>
               </li>
               <li class="header-nav-item header-end-link">
-                <a class="header-modal-link inline-block py-5 px-10 font-semibold text-sm uppercase bg-red-800 rounded-full hover:text-white"
+                <a class="header-modal-link inline-block py-5 px-10 font-semibold text-sm uppercase bg-white rounded-full hover:text-white hover:bg-amber-500"
                   href="#">Get in touch
                 </a>
               </li>
@@ -305,8 +307,8 @@
             <ul>
               <li class="marketing-card grid grid-cols-4 items-center p-4">
                 <div class="marketing-card-before max-w-[100px] mb-7 md:mb-0">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24"
-                    style="fill: #ffffff;">
+                  <svg class="marketing-product-icon" xmlns="http://www.w3.org/2000/svg" width="80" height="60"
+                    viewBox="0 0 24 24" style="fill: #ffffff;">
                     <path
                       d="M9.593 10.971c-.542 0-.969.475-.969 1.055 0 .578.437 1.055.969 1.055.541 0 .968-.477.968-1.055.011-.581-.427-1.055-.968-1.055zm3.468 0c-.542 0-.969.475-.969 1.055 0 .578.437 1.055.969 1.055.541 0 .968-.477.968-1.055-.001-.581-.427-1.055-.968-1.055z">
                     </path>
@@ -326,8 +328,8 @@
 
               <li class="marketing-card grid grid-cols-4 items-center p-4">
                 <div class="marketing-card-before mb-7 md:mb-0">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24"
-                    style="fill: #ffffff;">
+                  <svg class="marketing-icon" xmlns="http://www.w3.org/2000/svg" width="60" height="60"
+                    viewBox="0 0 24 24" style="fill: #ffffff;">
                     <path d="M8.21 17.32 7 16.8a2.13 2.13 0 1 0 1.17-2.93l1.28.53a1.58 1.58 0 0 1-1.22 2.92z"></path>
                     <path
                       d="M12 2a10 10 0 0 0-10 9.34l5.38 2.21a2.31 2.31 0 0 1 .47-.24A2.62 2.62 0 0 1 9 13.1l2.44-3.56a3.8 3.8 0 1 1 3.8 3.8h-.08l-3.51 2.5a2.77 2.77 0 0 1-5.47.68l-3.77-1.6A10 10 0 1 0 12 2z">
@@ -342,6 +344,19 @@
                   <h3 class="font-bold mb-2 text-[19px] capitalize">Marketing strategy & campaigns</h3>
                   <p class="text-neutral-500">
                     An effective campaign demands a great deal of time and planning run a marketing.
+                  </p>
+                </div>
+              </li>
+
+              <li class="marketing-card grid grid-cols-4 items-center p-4">
+                <div class="marketing-card-before mb-7 md:mb-0">
+                  <i class="fa-solid fa-wifi marketing-hotspot-icon"></i>
+                </div>
+
+                <div class="col-span-4 md:col-span-3">
+                  <h3 class="font-bold mb-2 text-[19px] capitalize">Hotspot</h3>
+                  <p class="text-neutral-500">
+                    A hotspot is a physical location where people can access the Internet
                   </p>
                 </div>
               </li>
@@ -553,7 +568,7 @@
       </div>
     </section>
 
-    <section class="package">
+    <section class="package pb-[80px]">
       <div class="container mx-auto px-4 xl:px-20">
         <div class="mb-[50px]">
           <div class="text-center max-w-[790px] mx-auto">
@@ -681,6 +696,119 @@
             <a class="inline-block p-3.5 px-10 capitalize border-solid border-2 border-black rounded-full hover:text-white hover:bg-amber-500 hover:border-amber-500 hover:ease-in duration-300"
               href="#">Get
               started</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="galery pt-[120px]">
+      <div class="container mx-auto px-2 xl:px-20">
+        <div class="max-w-[790px] mx-auto mb-8 text-center">
+          <h4 class="mb-2 font-semibold text-[13px] text-white uppercase">Wifi network</h4>
+          <h2 class="mb-2 font-bold text-3xl leading-[32px] text-white md:text-[50px] md:leading-[60px]">We provide
+            high rate <br> wifi services
+          </h2>
+          <p class="text-white">
+            The WiFi helps us with facts and figures, information and knowledge for personal, social and economic
+            development. The use of the wifi in our daily life depends on individual requirements and goals
+          </p>
+        </div>
+        <ul class="galery-list">
+          <li class="galery-xl-item">
+            <div class="galery-xl-wrapper">
+              <div class="galery-desctop">
+                <img src="./assets/images/device-xl.png" alt="The computer for galerys of the wi-fi form">
+              </div>
+
+              <ul class="galery-xl-images-list flex">
+                <li>
+                  <img class="xl-wifi-img" src="./assets/images/tekin-wifi-start.png"
+                    alt="Tekin wifi boshlang'ich forma">
+                </li>
+                <!-- <li>
+                  <img class="xl-wifi-img" src="./assets/images/tekin-wifi-form.png" alt="Tekin wifi formasi">
+                </li> -->
+                <li>
+                  <img class="xl-wifi-img" src="./assets/images/tekin-wifi-to'lov-muddati.png"
+                    alt="Tekin wifi to'lov muddati formasi">
+                </li>
+                <li>
+                  <img class="xl-wifi-img" src="./assets/images/tekin-wifi-to'lov.png" alt="Tekin wifi uchun to'lov">
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="galery-lg-item">
+            <div class="galery-lg-wrapper">
+              <div class="galery-desctop">
+                <img src="./assets/images/device-ml.png" alt="The laptop for galerys of the wi-fi form">
+              </div>
+
+              <ul class="galery-lg-images-list flex">
+                <li>
+                  <img class="lg-wifi-img" src="./assets/images/lg-tekin-wifi-start.png"
+                    alt="Tekin wifi boshlang'ich forma">
+                </li>
+                <!-- <li>
+                  <img class="xl-wifi-img" src="./assets/images/tekin-wifi-form.png" alt="Tekin wifi formasi">
+                </li> -->
+                <li>
+                  <img class="lg-wifi-img" src="./assets/images/lg-tekin-wifi-to'lov-muddati.png"
+                    alt="Tekin wifi to'lov muddati formasi">
+                </li>
+                <li>
+                  <img class="lg-wifi-img" src="./assets/images/lg-tekin-wifi-to'lov.png" alt="Tekin wifi uchun to'lov">
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="galery-md-item">
+            <div class="galery-md-wrapper">
+              <div class="galery-desctop">
+                <img class="ipad-img" src="./assets/images/md-device.png" alt="The ipad for galerys of the wi-fi form">
+              </div>
+
+              <ul class="galery-md-images-list flex">
+                <li>
+                  <img class="md-wifi-img" src="./assets/images/md-tekin-wifi-start.png"
+                    alt="Tekin wifi boshlang'ich forma">
+                </li>
+                <!-- <li>
+                  <img class="xl-wifi-img" src="./assets/images/tekin-wifi-form.png" alt="Tekin wifi formasi">
+                </li> -->
+                <li>
+                  <img class="md-wifi-img" src="./assets/images/md-tekin-wifi-to'lov-muddati.png"
+                    alt="Tekin wifi to'lov muddati formasi">
+                </li>
+                <li>
+                  <img class="md-wifi-img" src="./assets/images/md-tekin-wifi-to'lov.png" alt="Tekin wifi uchun to'lov">
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="galery-sm-item">
+            <div class="galery-sm-wrapper">
+              <div class="galery-mobile">
+                <img class="ipad-img" src="./assets/images/device-xs.png" alt="The ipad for galerys of the wi-fi form">
+              </div>
+
+              <ul class="galery-sm-images-list flex">
+                <li>
+                  <img class="sm-wifi-img" src="./assets/images/sm-tekin-wifi-start.png"
+                    alt="Tekin wifi boshlang'ich forma">
+                </li>
+                <!-- <li>
+                  <img class="xl-wifi-img" src="./assets/images/tekin-wifi-form.png" alt="Tekin wifi formasi">
+                </li> -->
+                <li>
+                  <img class="sm-wifi-img" src="./assets/images/sm-tekin-wifi-to'lov-muddati.png"
+                    alt="Tekin wifi to'lov muddati formasi">
+                </li>
+                <li>
+                  <img class="sm-wifi-img" src="./assets/images/sm-tekin-wifi-to'lov.png" alt="Tekin wifi uchun to'lov">
+                </li>
+              </ul>
+            </div>
           </li>
         </ul>
       </div>
@@ -1182,12 +1310,49 @@
     </div>
   </footer>
 
+  <!-- Modal -->
+  <div class="modal-start">
+    <div class="modal-wrapper">
+      <div class="modal">
+        <form class="modal-form">
+          <label class="form-label">
+            User name
+            <input class="form-name-input" type="text" name="useName" placeholder=". . .">
+          </label>
+          <label class="form-label">
+            Values
+            <select class="form-select" name="userChoise">
+              <option value="firstValue">First value</option>
+              <option value="secondValue">Second value</option>
+              <option value="thirdValue">Third value</option>
+            </select>
+          </label>
+          <label class="form-label">
+            Examples
+            <select class="form-select" name="example">
+              <option selected value="example">Expample</option>
+              <option value="secondExample">Second example</option>
+              <option value="thirdExample">Third example</option>
+            </select>
+          </label>
+          <label class="form-label ">
+            Your text
+            <textarea class="form-textarea" name="userMessage" cols="50" rows="5">. . .</textarea>
+          </label>
+
+          <div class="form-btns">
+            <button class="form-cansel-btn">Cansel</button>
+            <button class="form-submit-btn" type="submit">Submit</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script src="vender/slick/slick.js"></script>
   <!-- Main js -->
-  <script src="./assets/js/lottie.js"></script>
-  <script src="./assets/js/lottie-animation.js"></script>
   <script src="./assets/js/main.js"></script>
 </body>
 
