--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <link rel="stylesheet" href="vender/slick/slick.css">
   <link rel="stylesheet" href="vender/slick/slick-theme.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-  <script src="https:/cdnjs.cloudflare.com/ajax/libs/bodymovin/5.9.6/lottie.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.10.2/lottie.min.js"></script>
+  <!-- <script src="https:/cdnjs.cloudflare.com/ajax/libs/bodymovin/5.9.6/lottie.min.js"></script> -->
 </head>
 
 <body>
