--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Internet - Startup</title>
-  <link rel="stylesheet" href="./assets/css/main.css">
-  <!-- <link rel="stylesheet" href="./assets/css/main.min.css"> -->
+  <!-- <link rel="stylesheet" href="./assets/css/main.css"> -->
+  <link rel="stylesheet" href="./assets/css/main.min.css">
   <link rel="stylesheet" href="./vender/dist/main.css">
   <link rel="stylesheet" href="vender/slick/slick.css">
   <link rel="stylesheet" href="vender/slick/slick-theme.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.10.2/lottie.min.js"></script>
-  <!-- <script src="https:/cdnjs.cloudflare.com/ajax/libs/bodymovin/5.9.6/lottie.min.js"></script> -->
 </head>
 
 <body>
