Changed header styles on mobile version

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 
     <hr class="hidden lg:block">
 
-    <div class="header-end fixed z-10 left-0 right-0 py-2 transition-all duration-300 lg:py-10" style="top: 44px;">
+    <div
+      class="header-end staic w-full lg:fixed lg:z-10 lg:left-0 lg:right-0 py-4 transition-all duration-300 lg:py-10">
       <div class="container mx-auto px-4 xl:px-10">
         <div class="flex items-center justify-between">
           <a href="index.html">
@@ -137,7 +138,7 @@
   <!-- Site main -->
   <main>
     <!-- Hero section -->
-    <section class="hero pt-[150px]">
+    <section class="hero lg:pt-[150px]">
       <div class="container mx-auto px-4 lg:px-20">
         <div class="hero-wrapper grid grid-cols-1 items-center lg:grid-cols-2">
           <div>
