Changed navbar styles when it's opening event

--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
 
     <hr class="hidden lg:block">
 
-    <div
-      class="header-end staic w-full lg:fixed lg:z-10 lg:left-0 lg:right-0 py-4 transition-all duration-300 lg:py-10">
+    <div class="header-end staic lg:fixed lg:z-10 lg:left-0 lg:right-0 py-4 transition-all duration-300 lg:py-10">
       <div class="container mx-auto px-4 xl:px-10">
         <div class="flex items-center justify-between">
           <a href="index.html">
@@ -88,7 +87,7 @@
           <button class="open-nav-btn lg:hidden">
             <i class="fa-solid fa-bars header-menu-btn"></i>
           </button>
-          <nav class="header-nav pt-[85px] lg:pt-0" style="transform: translateX(150%);">
+          <nav class="header-nav pt-[85px] lg:pt-0" style="display: none;">
             <button class="header-nav-close-btn lg:hidden">
               <img src="./assets/images/close-btn.svg" alt="close button for navbar" width="25" height="25">
             </button>
