Changed modal values

--- a/index.html
+++ b/index.html
@@ -1247,22 +1247,22 @@
         <form class="modal-form">
           <label class="form-label">
             User name
-            <input class="form-name-input" type="text" name="useName" placeholder=". . .">
+            <input class="form-name-input" type="text" name="useName" placeholder="John">
           </label>
           <label class="form-label">
-            Values
+            Subject 1
             <select class="form-select" name="userChoise">
-              <option value="firstValue">First value</option>
-              <option value="secondValue">Second value</option>
-              <option value="thirdValue">Third value</option>
+              <option value="firstValue">Value 1</option>
+              <option value="secondValue">Value 2</option>
+              <option value="thirdValue">Value 3</option>
             </select>
           </label>
           <label class="form-label">
-            Examples
+            Subject 2
             <select class="form-select" name="example">
-              <option selected value="example">Expample</option>
-              <option value="secondExample">Second example</option>
-              <option value="thirdExample">Third example</option>
+              <option selected value="example">Value 1</option>
+              <option value="secondExample">Value 2</option>
+              <option value="thirdExample">Value 3</option>
             </select>
           </label>
           <label class="form-label ">
