Added links to href of internet brands links

--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
               <li>
                 <ul class="flex items-center gap-x-5">
                   <li>
-                    <a href="#" target="_blank">
+                    <a href="https://www.facebook.com/" target="_blank">
                       <i class="fa-brands fa-square-facebook header-facebook-icon"></i>
                     </a>
                   </li>
                   <li>
-                    <a href="#" target="_blank">
+                    <a href="https://twitter.com/" target="_blank">
                       <i class="fa-brands fa-twitter header-twitter-icon"></i>
                     </a>
                   </li>
                   <li>
-                    <a href="#" target="_blank">
+                    <a href="https://www.instagram.com/" target="_blank">
                       <i class="fa-brands fa-instagram header-instagram-icon"></i>
                     </a>
                   </li>
                   <li>
-                    <a href="#" target="_blank">
+                    <a href="https://www.youtube.com/" target="_blank">
                       <i class="fa-brands fa-youtube header-youtube-icon"></i>
                     </a>
                   </li>
@@ -1196,22 +1196,22 @@
 
           <ul class="flex items-center gap-x-5">
             <li>
-              <a href="#" target="_blank">
+              <a href="https://www.facebook.com/" target="_blank">
                 <i class="fa-brands fa-square-facebook header-facebook-icon"></i>
               </a>
             </li>
             <li>
-              <a href="#" target="_blank">
+              <a href="https://twitter.com/" target="_blank">
                 <i class="fa-brands fa-twitter header-twitter-icon"></i>
               </a>
             </li>
             <li>
-              <a href="#" target="_blank">
+              <a href="https://www.instagram.com/" target="_blank">
                 <i class="fa-brands fa-instagram header-instagram-icon"></i>
               </a>
             </li>
             <li>
-              <a href="#" target="_blank">
+              <a href="https://www.youtube.com/" target="_blank">
                 <i class="fa-brands fa-youtube header-youtube-icon"></i>
               </a>
             </li>
@@ -1247,7 +1247,8 @@
         <form class="modal-form">
           <label class="form-label">
             User name
-            <input class="form-name-input" type="text" name="useName" placeholder="John">
+            <input class="form-name-input" type="text" name="useName" minlength="2" maxlength="15" placeholder="John"
+              required>
           </label>
           <label class="form-label">
             Subject 1
