Added about us page

--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
                 <ul class="flex items-center gap-x-5">
                   <li>
                     <a href="https://www.facebook.com/" target="_blank">
-                      <i class="fa-brands fa-square-facebook header-facebook-icon"></i>
+                      <i class="fa-brands fa-square-facebook header-facebook-icon text-lg"></i>
                     </a>
                   </li>
                   <li>
                     <a href="https://twitter.com/" target="_blank">
-                      <i class="fa-brands fa-twitter header-twitter-icon"></i>
+                      <i class="fa-brands fa-twitter header-twitter-icon text-lg"></i>
                     </a>
                   </li>
                   <li>
                     <a href="https://www.instagram.com/" target="_blank">
-                      <i class="fa-brands fa-instagram header-instagram-icon"></i>
+                      <i class="fa-brands fa-instagram header-instagram-icon text-lg"></i>
                     </a>
                   </li>
                   <li>
                     <a href="https://www.youtube.com/" target="_blank">
-                      <i class="fa-brands fa-youtube header-youtube-icon"></i>
+                      <i class="fa-brands fa-youtube header-youtube-icon text-lg"></i>
                     </a>
                   </li>
                 </ul>
@@ -98,8 +98,7 @@
               </li>
               <li class="header-nav-item">
                 <a class="header-nav-link font-semibold text-sm lg:text-white uppercase hover:text-amber-400"
-                  href="#">About
-                  us</a>
+                  href="about.html">About us</a>
               </li>
               <li class="header-nav-item">
                 <div
@@ -135,7 +134,7 @@
   </header>
 
   <!-- Site main -->
-  <main>
+  <main class="main">
     <!-- Hero section -->
     <section class="hero lg:pt-[150px]">
       <div class="container mx-auto px-4 lg:px-20">
