Changed styles in about page and in js file too

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Internet - Startup</title>
+  <title>Internet - About us</title>
   <!-- <link rel="stylesheet" href="./assets/css/main.css"> -->
   <link rel="stylesheet" href="./assets/css/main.min.css">
   <link rel="stylesheet" href="./vender/dist/main.css">
@@ -122,24 +122,22 @@
           </div>
 
           <div class="xl:pr-10 xl:pl-[100px]">
-            <h4 class="choice-mini-title relative mb-1 font-semibold text-sm leading-5 tracking-[1px] uppercase">Why
-              choose us
-            </h4>
-            <h2 class="mb-5 text-2xl capitalize md:text-[30px] lg:text-[50px] lg:leading-[60px]">We offer expert SEO and
+            <h2 class="mb-3 font-bold text-xl uppercase md:text-2xl xl:mb-5 xl:text-3xl xl:leading-10">We offer expert
+              SEO and
               marketing.
             </h2>
-            <p class="mb-8 font-semibold text-neutral-500">
+            <p class="mb-5 font-semibold text-neutral-500 xl:text-xl">
               We are a team of young, experienced developers who are passionate about their work. Years of cooperation
               with both corporations.
             </p>
-            <ol class="mb-6">
+            <ul class="mb-6 pl-4 list-disc">
               <li class="choice-link-item">
-                <span class="block mb-[10px] font-bold text-xl md:text-2xl">Perfect for large sites agencies</span>
+                <span class="block mb-[10px] font-semibold text-lg">Perfect for large sites agencies</span>
               </li>
               <li class="choice-link-item">
-                <span class="font-bold text-xl md:text-2xl">We appreciate your trust greatly</span>
+                <span class="font-semibold text-lg">We appreciate your trust greatly</span>
               </li>
-            </ol>
+            </ul>
             <a class="inline-block py-4 px-10 font-semibold uppercase text-sm text-white bg-slate-800 transition-all duration-300 hover:bg-amber-500"
               href="#">Contact
               us</a>
@@ -149,12 +147,12 @@
     </section>
 
     <!-- Who we are section -->
-    <section class="py-[45px] bg-white xl:py-[80px]">
+    <section class="py-[45px] bg-white xl:py-[60px]">
       <div class="container mx-auto px-4 lg:px-20">
         <div class="xl:flex xl:justify-between xl:items-center">
-          <div class="mb-5 mx-auto xl:max-w-[680px] md:text-center xl:mb-0 xl:mx-0 xl:text-left">
+          <div class="mb-5 mx-auto xl:max-w-[700px] md:text-center xl:mb-0 xl:mx-0 xl:text-left">
             <h3 class="mb-3 font-bold text-xl uppercase md:text-2xl xl:mb-5 xl:text-3xl">Our people come first</h3>
-            <p class="font-semibold text-neutral-500">
+            <p class="font-semibold text-neutral-500 xl:text-xl">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod facilis voluptas dolorum, non eius nam
               quam
               suscipit deleniti impedit architecto magni nobis corporis, velit hic? Perferendis soluta odit, magnam
@@ -172,53 +170,70 @@
     </section>
 
     <!-- Our founding section -->
-    <section class="py-[45px] xl:py-[80px]">
+    <section class="py-[45px] xl:py-[50px]">
       <div class="container  mx-auto px-4 xl:px-20">
-        <div class="xl:flex xl:justify-between xl:items-center">
-          <img class="mx-auto mb-5 xl:max-w-[630px] xl:mx-0 xl:mr-8 xl:mb-0" src="./assets/images/our-founding.jpg"
-            alt="" width="630" height="420">
-          <div class="md:text-center xl:max-w-[680px] xl:text-left">
-            <h3 class="mb-3 font-bold text-xl uppercase md:text-2xl xl:mb-5 xl:text-3xl">Our founding</h3>
-            <p class="font-semibold text-neutral-500">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque enim repellendus exercitationem! Tenetur
-              sapiente necessitatibus, rerum quod laudantium libero obcaecati dolor id aut incidunt dolores nisi
-              praesentium eligendi quidem facere saepe, exercitationem quam sint velit, unde eaque. Nostrum placeat
-              reprehenderit expedita iusto consequatur laboriosam totam sint officia modi necessitatibus maxime magni,
-              veritatis mollitia ducimus quasi? At asperiores, in minus debitis quibusdam quod adipisci distinctio
-              consequatur eaque esse optio est cupiditate veniam corrupti magni aperiam labore. Autem debitis earum
-              corrupti eaque. Officia veritatis vitae illum placeat mollitia ut hic dignissimos a?
-            </p>
-          </div>
+        <div class="text-center">
+          <h3 class="mb-3 font-bold text-xl uppercase md:text-2xl xl:mb-5 xl:text-3xl">Our founding</h3>
+          <p class="font-semibold text-neutral-500 xl:text-xl">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit doloribus corrupti fugiat voluptatibus? Quis
+            quos id illo molestias delectus ullam quia dicta a qui tempore cumque enim suscipit, ex nobis provident
+            explicabo dolores necessitatibus maxime esse in aut. Voluptatem ipsum illum neque, quae repellendus
+            excepturi. Mollitia aliquid, similique exercitationem id incidunt necessitatibus, perspiciatis ipsa autem
+            architecto adipisci officia accusantium hic maxime magnam neque libero? Odit voluptatum eaque eum omnis
+            voluptatibus possimus mollitia magni tenetur in! Numquam a blanditiis praesentium molestiae quam dolorem
+            tempora provident modi minus, magnam quos odit inventore quas earum eius. Velit sint quibusdam placeat rem
+            quidem ea est, nihil aspernatur beatae rerum sit. Reiciendis dolor blanditiis eligendi corporis nemo.
+            Consequuntur at eum ipsa maiores cum! Minus omnis, eaque quas quia commodi sint ea exercitationem soluta
+            ullam adipisci aperiam? Deleniti distinctio omnis delectus expedita facilis labore corporis ipsam odit
+            voluptates recusandae, quaerat voluptatem voluptatum aut atque, officiis, adipisci commodi natus rerum ipsum
+            repellat architecto ut beatae. Voluptatem nostrum eos minima, placeat, accusantium alias, minus sunt quae
+            possimus natus omnis beatae facere iste consequatur adipisci ratione aut quia aliquid. Quidem, non ullam hic
+            saepe repellat molestiae beatae. Dolor necessitatibus asperiores error eaque, beatae sint provident corrupti
+            pariatur quod fugiat.
+          </p>
         </div>
       </div>
     </section>
 
     <!-- Our team section -->
-    <section class="py-10 bg-white xl:py-20">
-      <div class="container mx-auto px-4 lg:px-20">
+    <section class="py-10 bg-white xl:py-[60px]">
+      <div class="container mx-auto px-4 xl:px-20">
         <div>
           <div class="mb-7 text-center">
             <h4 class="mb-1 font-bold text-[13px] leading-5 uppercase">Our team</h4>
             <h2 class="text-2xl capitalize md:text-3xl xl:text-[50px] xl:leading-[60px]">Our expert advisor</h2>
           </div>
-          <ul class="flex flex-col items-center text-center xl:flex-row xl:justify-between xl:items-start xl:text-left">
-            <li class="max-w-[420px] w-full mb-5 xl:mb-0">
-              <img class="mb-4" src="./assets/images/michael.jpg" alt="Michael Daniel is a Project manager" width="420"
-                height="558">
+          <ul
+            class="grid grid-cols-1 text-center gap-x-5 md:grid-cols-2 lg:grid-cols-3 lg:text-left xl:grid-cols-5 xl:justify-between">
+            <li class="max-w-[260px] mx-auto w-full mb-5 xl:mb-0">
+              <img class="mb-4 max-w-[260px] max-h-[340px]" src="./assets/images/michael.jpg"
+                alt="Michael Daniel is a Project manager" width="350" height="340">
               <h3 class="font-medium text-[26px] leading-9 capitalize">Michael daniel</h3>
               <p class="font-semibold capitalize text-neutral-500">Project manager</p>
             </li>
-            <li class="max-w-[420px] w-full mb-5 xl:mb-0">
-              <img class="mb-4" src="./assets/images/eliana.jpg" alt="Eliana Ivy is a General manager" width="420"
-                height="558">
+            <li class="max-w-[260px] mx-auto w-full mb-5 xl:mb-0">
+              <img class="mb-4 max-w-[260px] max-h-[340px]" src="./assets/images/eliana.jpg"
+                alt="Eliana Ivy is a General manager" width="350" height="340">
               <h3 class="font-medium text-[26px] leading-9 capitalize">Eliana ivy</h3>
               <p class="font-semibold capitalize text-neutral-500">General manager</p>
             </li>
-            <li class="max-w-[420px] w-full">
-              <img class="mb-4" src="./assets/images/richard.jpg" alt="Richard Edward is a Digital strategist"
-                width="420" height="558">
+            <li class="max-w-[260px] mx-auto w-full">
+              <img class="mb-4 max-w-[260px] max-h-[340px]" src="./assets/images/richard.jpg"
+                alt="Richard Edward is a Digital strategist" width="350" height="340">
               <h3 class="font-medium text-[26px] leading-9 capitalize">Richard edward</h3>
               <p class="font-semibold capitalize text-neutral-500">Digital strategist</p>
+            </li>
+            <li class="max-w-[260px] mx-auto w-full">
+              <img class="mb-4 max-w-[260px] max-h-[340px]" src="./assets/images/derek.jpg"
+                alt="Richard Edward is a Digital strategist" width="350" height="340">
+              <h3 class="font-medium text-[26px] leading-9 capitalize">Derek hale</h3>
+              <p class="font-semibold capitalize text-neutral-500">Back end developer</p>
+            </li>
+            <li class="max-w-[260px] mx-auto w-full">
+              <img class="mb-4 max-w-[260px] max-h-[340px]" src="./assets/images/dylan.png"
+                alt="Richard Edward is a Digital strategist" width="350" height="340">
+              <h3 class="font-medium text-[26px] leading-9 capitalize">Dylan sprayberry</h3>
+              <p class="font-semibold capitalize text-neutral-500">Fron end developer</p>
             </li>
           </ul>
         </div>
