--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
                 <ul class="flex items-center gap-x-5">
                   <li>
                     <a href="https://www.facebook.com/" target="_blank">
-                      <i class="fa-brands fa-square-facebook header-facebook-icon text-lg"></i>
+                      <i class="fa-brands fa-square-facebook header-facebook-icon text-lg text-white"></i>
                     </a>
                   </li>
                   <li>
                     <a href="https://twitter.com/" target="_blank">
-                      <i class="fa-brands fa-twitter header-twitter-icon text-lg"></i>
+                      <i class="fa-brands fa-twitter header-twitter-icon text-lg text-white"></i>
                     </a>
                   </li>
                   <li>
                     <a href="https://www.instagram.com/" target="_blank">
-                      <i class="fa-brands fa-instagram header-instagram-icon text-lg"></i>
+                      <i class="fa-brands fa-instagram header-instagram-icon text-lg text-white"></i>
                     </a>
                   </li>
                   <li>
                     <a href="https://www.youtube.com/" target="_blank">
-                      <i class="fa-brands fa-youtube header-youtube-icon text-lg"></i>
+                      <i class="fa-brands fa-youtube header-youtube-icon text-lg text-white"></i>
                     </a>
                   </li>
                 </ul>
@@ -1196,22 +1196,22 @@
           <ul class="flex items-center gap-x-5">
             <li>
               <a href="https://www.facebook.com/" target="_blank">
-                <i class="fa-brands fa-square-facebook header-facebook-icon"></i>
+                <i class="fa-brands fa-square-facebook header-facebook-icon text-white"></i>
               </a>
             </li>
             <li>
               <a href="https://twitter.com/" target="_blank">
-                <i class="fa-brands fa-twitter header-twitter-icon"></i>
+                <i class="fa-brands fa-twitter header-twitter-icon text-white"></i>
               </a>
             </li>
             <li>
               <a href="https://www.instagram.com/" target="_blank">
-                <i class="fa-brands fa-instagram header-instagram-icon"></i>
+                <i class="fa-brands fa-instagram header-instagram-icon text-white"></i>
               </a>
             </li>
             <li>
               <a href="https://www.youtube.com/" target="_blank">
-                <i class="fa-brands fa-youtube header-youtube-icon"></i>
+                <i class="fa-brands fa-youtube header-youtube-icon text-white"></i>
               </a>
             </li>
           </ul>
