Added text-center to about page's our found section's text

--- a/about.html
+++ b/about.html
@@ -172,9 +172,9 @@
     <!-- Our founding section -->
     <section class="py-[45px] xl:py-[50px]">
       <div class="container  mx-auto px-4 xl:px-20">
-        <div class="text-center">
-          <h3 class="mb-3 font-bold text-xl uppercase md:text-2xl xl:mb-5 xl:text-3xl">Our founding</h3>
-          <p class="font-semibold text-neutral-500 xl:text-xl">
+        <div>
+          <h3 class="mb-3 font-bold text-xl text-center uppercase md:text-2xl xl:mb-5 xl:text-3xl">Our founding</h3>
+          <p class="font-semibold text-neutral-500 text-justify xl:text-xl">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit doloribus corrupti fugiat voluptatibus? Quis
             quos id illo molestias delectus ullam quia dicta a qui tempore cumque enim suscipit, ex nobis provident
             explicabo dolores necessitatibus maxime esse in aut. Voluptatem ipsum illum neque, quae repellendus
