The blog page has been made responsive

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <!-- About header -->
+  <!-- Site header -->
   <header class="header">
     <div class="about-header py-2 bg-white transition-all duration-300 lg:fixed lg:z-10 lg:left-0 lg:right-0">
       <div class="container mx-auto px-4 2xl:px-10">
@@ -53,7 +53,8 @@
                 </div>
               </li>
               <li class="header-nav-item">
-                <a class="header-nav-link font-semibold text-sm uppercase hover:text-amber-400" href="#">Blog</a>
+                <a class="header-nav-link font-semibold text-sm uppercase hover:text-amber-400"
+                  href="./blog.html">Blog</a>
               </li>
               <li class="header-nav-item">
                 <a class="header-nav-link font-semibold text-sm uppercase hover:text-amber-400" href="#">Contact
