--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               </li>
               <li class="header-nav-item">
                 <a class="header-nav-link font-semibold text-sm lg:text-white uppercase hover:text-amber-400"
-                  href="#">Blog</a>
+                  href="./blog.html">Blog</a>
               </li>
               <li class="header-nav-item">
                 <a class="header-nav-link font-semibold text-sm lg:text-white uppercase hover:text-amber-400"
@@ -1136,7 +1136,8 @@
                   <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="#">Report a bug</a>
                 </li>
                 <li class="mb-3">
-                  <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="#">About us</a>
+                  <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="./about.html">About
+                    us</a>
                 </li>
                 <li class="mb-3">
                   <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="#">Product</a>
