Changed some images and post-one's title and text

--- a/post-one.html
+++ b/post-one.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>First post</title>
-  <link rel="stylesheet" href="./assets/css/main.css">
-  <!-- <link rel="stylesheet" href="./assets/css/main.min.css"> -->
+  <!-- <link rel="stylesheet" href="./assets/css/main.css"> -->
+  <link rel="stylesheet" href="./assets/css/main.min.css">
   <link rel="stylesheet" href="./vender/dist/main.css">
   <link rel="stylesheet" href="vender/slick/slick.css">
   <link rel="stylesheet" href="vender/slick/slick-theme.css">
@@ -104,14 +104,13 @@
           <div class="mx-auto pr-[14px] xl:col-span-2 xl:mx-0">
             <article class="mb-10" id="blog-posts">
               <div class="mb-5">
-                <img class="mb-5" src="./assets/images/blog-02b.jpg" alt="" width="880" height="734">
-                <p class="flex items-center mb-6 text-neutral-500">
+                <img class="mb-5 xl:max-w-[880px] max-h-[500px]" src="./assets/images/blog-02b.jpg" alt="" width="880"
+                  height="500">
+                <h3 class="flex items-center mb-6 font-semibold text-3xl leading-10">
                   <span class="inline-block mr-3 py-[6px] px-3 font-bold text-2xl text-white bg-orange-500">M</span>
-                  Posuere morbi leo urna molestie at. Ipsum dolor sit amet consectetur adipiscing elit pellentesque
-                  habitant morbi. Odio ut enim blandit volutpat maecenas volutpat. Tristique magna sit amet purus
-                  gravida.
-                </p>
-                <p class="text-neutral-500">
+                  Easy ways to implement wellbeing programs
+                </h3>
+                <p class="mb-10 text-neutral-500">
                   Posuere morbi leo urna molestie at. Ipsum dolor sit amet consectetur adipiscing elit pellentesque
                   habitant morbi. Odio ut enim blandit volutpat maecenas volutpat. Tristique magna sit amet purus
                   gravida.
@@ -119,15 +118,23 @@
                   leo
                   integer. Elit eget gravida cum sociis natoque Amet consectetur adipiscing elit ut aliquam purus sit
                   amet
-                  luctus
+                  luctusmet consectetur adipiscing elit ut aliquam purus sit amet luctus. Vulputate mi sit amet mauris
+                  commodo quis imperdiet. uam adipiscing vitae proin sagittis nisl rhoncus. Sagittis nisl rhoncus mattis
+                  rhoncus urna. Mauris vitae ultricies leo integer. Elit eget gravida cum sociis natoque, habitant
+                  morbi. Odio ut enim blandit volutpat maecenas volutpat. Tristique magna sit amet purus
+                  gravida.
+                  Vitae proin sagittis nisl rhoncus. Sagittis nisl rhoncus mattis rhoncus urna. Mauris vit
                 </p>
-                <blockquote class="post-blockquote mb-[30px] pr-[10px] pl-20">
-                  <i class="fa-regular fa-ditto"></i>
-                  <p class="mb-[15px] font-semibold text-[22px] leading-8">
-                    We know that when you hire a removal company you're putting your trust in the people that move your
-                    precious belongings.
-                  </p>
-                  <span class="font-semibold text-[15px] leading-5 text-orange-500">- Hanan Innocent</span>
+                <blockquote class="flex mb-[30px] pr-[10px]">
+                  <i class="fa-sharp fa-solid fa-quote-right mr-8 text-6xl text-orange-500"></i>
+                  <div>
+                    <p class="mb-[15px] font-semibold text-[22px] leading-8">
+                      We know that when you hire a removal company you're putting your trust in the people that move
+                      your
+                      precious belongings.
+                    </p>
+                    <span class="font-semibold text-[15px] leading-5 text-orange-500">- Hanan Innocent</span>
+                  </div>
                 </blockquote>
                 <p class="text-neutral-500">
                   Vitae proin sagittis nisl rhoncus. Sagittis nisl rhoncus mattis rhoncus urna. Mauris vitae ultricies
