--- a/blog.html
+++ b/blog.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Internet - Blog</title>
-  <link rel="stylesheet" href="./assets/css/main.css">
-  <!-- <link rel="stylesheet" href="./assets/css/main.min.css"> -->
+  <!-- <link rel="stylesheet" href="./assets/css/main.css"> -->
+  <link rel="stylesheet" href="./assets/css/main.min.css">
   <link rel="stylesheet" href="./vender/dist/main.css">
   <link rel="stylesheet" href="vender/slick/slick.css">
   <link rel="stylesheet" href="vender/slick/slick-theme.css">
@@ -102,7 +102,8 @@
         <div class="grid grid-cols-1 grid-flow-row items-start gap-y-8 xl:grid-cols-3">
           <ul class="mx-auto xl:col-span-2 xl:mx-0" id="blog-posts">
             <li class="blog-post max-w-[880px] w-full" data-category="news">
-              <img class="mb-5" src="./assets/images/post-2.jpg" alt="" width="880" height="500">
+              <img class="max-h-[500px] mb-5" src="./assets/images/blog-01b.jpg"
+                alt="Two girls and one man are looking at laptop" width="880" height="500">
               <div>
                 <ul class="flex flex-wrap items-center gap-y-2 gap-x-4 xl:gap-x-8">
                   <li class="flex items-center">
@@ -129,14 +130,15 @@
                   repellendus eum? Consequuntur odit suscipit ea.
                 </p>
                 <a class="flex items-center ml-auto font-bold text-[14px] uppercase ease-in duration-200 hover:text-orange-600"
-                  href="#">
+                  href="./post-one.html">
                   <span>Read more</span>
                   <i class="fa-solid fa-arrow-right ml-2"></i>
                 </a>
               </div>
             </li>
             <li class="blog-post max-w-[880px] w-full" data-category="tutorials">
-              <img class="mb-5" src="./assets/images/post-4.jpg" alt="" width="880" height="500">
+              <img class="max-h-[500px] mb-5" src="./assets/images/blog-02b.jpg"
+                alt="One girl and man are shaking hands" width="880" height="500">
               <div>
                 <ul class="flex flex-wrap items-center gap-y-2 gap-x-4 xl:gap-x-8">
                   <li class="flex items-center">
@@ -153,7 +155,8 @@
                   </li>
                 </ul>
                 <h3 class="mb-3 font-semibold text-2xl leading-8 md:text-3xl md:leading-10">
-                  <a href="#">Health management firm scales its operations with a managed</a>
+                  <a class="ease-in duration-200 hover:text-orange-600" href="./post-one.html">Health management firm
+                    scales its operations with a managed</a>
                 </h3>
                 <p class="mb-5 font-semibold text-neutral-500">
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id recusandae unde, inventore mollitia alias
@@ -161,14 +164,15 @@
                   exercitationem expedita illum quos.
                 </p>
                 <a class="flex items-center ml-auto font-bold text-[14px] uppercase text-orange-600 hover:text-blue-500"
-                  href="#">
+                  href="./post-one.html">
                   <span>Read more</span>
                   <i class="fa-solid fa-arrow-right ml-2"></i>
                 </a>
               </div>
             </li>
             <li class="blog-post max-w-[880px] w-full" data-category="opinion">
-              <img class="mb-5" src="./assets/images/post-9.jpg" alt="" width="880" height="500">
+              <img class="max-h-[500px] mb-5" src="./assets/images/blog-03b.jpg"
+                alt="One man and girl are talking to each other" width="880" height="500">
               <div>
                 <ul class="flex flex-wrap items-center gap-y-2 gap-x-4 xl:gap-x-8">
                   <li class="flex items-center">
@@ -185,7 +189,8 @@
                   </li>
                 </ul>
                 <h3 class="mb-3 font-semibold text-2xl leading-8 md:text-3xl md:leading-10">
-                  <a href="#">Easy ways to implement wellbeing programs</a>
+                  <a class="ease-in duration-200 hover:text-orange-600" href="./post-one.html">Easy ways to implement
+                    wellbeing programs</a>
                 </h3>
                 <p class="mb-5 font-semibold text-neutral-500">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quisquam eos corporis molestias sequi
@@ -193,14 +198,15 @@
                   tempore esse?
                 </p>
                 <a class="flex items-center ml-auto font-bold text-[14px] uppercase text-orange-600 hover:text-blue-500"
-                  href="#">
+                  href="./post-one.html">
                   <span>Read more</span>
                   <i class="fa-solid fa-arrow-right ml-2"></i>
                 </a>
               </div>
             </li>
             <li class="blog-post max-w-[880px] w-full" data-category="news">
-              <img class="mb-5" src="./assets/images/post-2.jpg" alt="" width="880" height="500">
+              <img class="max-h-[500px] mb-5" src="./assets/images/blog-04b.jpg" alt="There is a meeting" width="880"
+                height="500">
               <div>
                 <ul class="flex flex-wrap items-center gap-y-2 gap-x-4 xl:gap-x-8">
                   <li class="flex items-center">
@@ -217,7 +223,8 @@
                   </li>
                 </ul>
                 <h2 class="mb-3 font-semibold text-2xl leading-8 md:text-3xl md:leading-10">
-                  <a href="#">Things Can Help Any coworking Flourish Again</a>
+                  <a class="ease-in duration-200 hover:text-orange-600" href="./post-one.html">Things Can Help Any
+                    coworking Flourish Again</a>
                 </h2>
                 <p class="mb-5 font-semibold text-neutral-500">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta at inventore minima nemo
@@ -225,14 +232,15 @@
                   dignissimos ducimus. Magnam?
                 </p>
                 <a class="flex items-center ml-auto font-bold text-[14px] uppercase text-orange-600 hover:text-blue-500"
-                  href="#">
+                  href="./post-one.html">
                   <span>Read more</span>
                   <i class="fa-solid fa-arrow-right ml-2"></i>
                 </a>
               </div>
             </li>
             <li class="blog-post max-w-[880px] w-full" data-category="tutorials">
-              <img class="mb-5" src="./assets/images/post-4.jpg" alt="" width="880" height="500">
+              <img class="max-h-[500px] mb-5" src="./assets/images/blog-05b.jpg" alt="Three girls are laughing"
+                width="880" height="500">
               <div>
                 <ul class="flex flex-wrap items-center gap-y-2 gap-x-4 xl:gap-x-8">
                   <li class="flex items-center">
@@ -249,7 +257,8 @@
                   </li>
                 </ul>
                 <h2 class="mb-3 font-semibold text-2xl leading-8 md:text-3xl md:leading-10">
-                  <a href="#">Five Ways Elevate Your Employees Workplace</a>
+                  <a class="ease-in duration-200 hover:text-orange-600" href="./post-one.html">Five Ways Elevate Your
+                    Employees Workplace</a>
                 </h2>
                 <p class="mb-5 font-semibold text-neutral-500">
                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae ex voluptatem quisquam cumque totam
@@ -257,14 +266,15 @@
                   eius.
                 </p>
                 <a class="flex items-center ml-auto font-bold text-[14px] uppercase text-orange-600 hover:text-blue-500"
-                  href="#">
+                  href="./post-one.html">
                   <span>Read more</span>
                   <i class="fa-solid fa-arrow-right ml-2"></i>
                 </a>
               </div>
             </li>
             <li class="blog-post max-w-[880px] w-full" data-category="news">
-              <img class="mb-5" src="./assets/images/post-9.jpg" alt="" width="880" height="500">
+              <img class="max-h-[500px] mb-5" src="./assets/images/blog-06b.jpg"
+                alt="Six people are happy looking at laptop" width="880" height="500">
               <div>
                 <ul class="flex flex-wrap items-center gap-y-2 gap-x-4 xl:gap-x-8">
                   <li class="flex items-center">
@@ -281,7 +291,8 @@
                   </li>
                 </ul>
                 <h2 class="mb-3 font-semibold text-2xl leading-8 md:text-3xl md:leading-10">
-                  <a href="#">Lead Generation and Your coworking Marketing Strategy</a>
+                  <a class="ease-in duration-200 hover:text-orange-600" href="./post-one.html">Lead Generation and Your
+                    coworking Marketing Strategy</a>
                 </h2>
                 <p class="mb-5 font-semibold text-neutral-500">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque totam id rem similique, temporibus odit
@@ -289,14 +300,15 @@
                   delectus blanditiis deserunt.
                 </p>
                 <a class="flex items-center ml-auto font-bold text-[14px] uppercase text-orange-600 hover:text-blue-500"
-                  href="#">
+                  href="./post-one.html">
                   <span>Read more</span>
                   <i class="fa-solid fa-arrow-right ml-2"></i>
                 </a>
               </div>
             </li>
             <li class="blog-post max-w-[880px] w-full" data-category="tutorials">
-              <img class="mb-5" src="./assets/images/post-4.jpg" alt="" width="880" height="500">
+              <img class="max-h-[500px] mb-5" src="./assets/images/blog-07b.jpg"
+                alt="Two women are looking at laptop and smiling" width="880" height="500">
               <div>
                 <ul class="flex flex-wrap items-center gap-y-2 gap-x-4 xl:gap-x-8">
                   <li class="flex items-center">
@@ -313,7 +325,8 @@
                   </li>
                 </ul>
                 <h2 class="mb-3 font-semibold text-2xl leading-8 md:text-3xl md:leading-10">
-                  <a href="#">Creating A Marketing Plan For Your coworking Space</a>
+                  <a class="ease-in duration-200 hover:text-orange-600" href="./post-one.html">Creating A Marketing Plan
+                    For Your coworking Space</a>
                 </h2>
                 <p class="mb-5 font-semibold text-neutral-500">
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione dolorum ut beatae harum, explicabo
@@ -321,14 +334,15 @@
                   nemo.
                 </p>
                 <a class="flex items-center ml-auto font-bold text-[14px] uppercase text-orange-600 hover:text-blue-500"
-                  href="#">
+                  href="./post-one.html">
                   <span>Read more</span>
                   <i class="fa-solid fa-arrow-right ml-2"></i>
                 </a>
               </div>
             </li>
             <li class="blog-post max-w-[880px] w-full" data-category="opinion">
-              <img class="mb-5" src="./assets/images/post-2.jpg" alt="" width="880" height="500">
+              <img class="max-h-[500px] mb-5" src="./assets/images/blog-08b.jpg"
+                alt="A man wearing glasses is looking at the paper and reading something" width="880" height="500">
               <div>
                 <ul class="flex flex-wrap items-center gap-y-2 gap-x-4 xl:gap-x-8">
                   <li class="flex items-center">
@@ -345,7 +359,8 @@
                   </li>
                 </ul>
                 <h2 class="mb-3 font-semibold text-2xl leading-8 md:text-3xl md:leading-10">
-                  <a href="#">Global IT consulting & software solutions provider</a>
+                  <a class="ease-in duration-200 hover:text-orange-600" href="./post-one.html">Global IT consulting &
+                    software solutions provider</a>
                 </h2>
                 <p class="mb-5 font-semibold text-neutral-500">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente vitae culpa doloribus quasi
@@ -353,14 +368,15 @@
                   blanditiis libero deserunt.
                 </p>
                 <a class="flex items-center ml-auto font-bold text-[14px] uppercase text-orange-600 hover:text-blue-500"
-                  href="#">
+                  href="./post-one.html">
                   <span>Read more</span>
                   <i class="fa-solid fa-arrow-right ml-2"></i>
                 </a>
               </div>
             </li>
             <li class="blog-post max-w-[880px] w-full" data-category="opinion">
-              <img class="mb-5" src="./assets/images/post-9.jpg" alt="" width="880" height="500">
+              <img class="max-h-[500px] mb-5" src="./assets/images/blog-09b.jpg" alt="A team is discussing" width="880"
+                height="500">
               <div>
                 <ul class="flex flex-wrap items-center gap-y-2 gap-x-4 xl:gap-x-8">
                   <li class="flex items-center">
@@ -377,7 +393,8 @@
                   </li>
                 </ul>
                 <h2 class="mb-3 font-semibold text-2xl leading-8 md:text-3xl md:leading-10">
-                  <a href="#">Find Your Target Market for coworking Spaces</a>
+                  <a class="ease-in duration-200 hover:text-orange-600" href="./post-one.html">Find Your Target Market
+                    for coworking Spaces</a>
                 </h2>
                 <p class="mb-5 font-semibold text-neutral-500">
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores nam adipisci necessitatibus quidem
@@ -385,7 +402,7 @@
                   aperiam ut quia consequatur nostrum ullam quam fugit distinctio?
                 </p>
                 <a class="flex items-center font-bold text-[14px] uppercase text-orange-600 hover:text-blue-500"
-                  href="#">
+                  href="./post-one.html">
                   <span>Read more</span>
                   <i class="fa-solid fa-arrow-right ml-2"></i>
                 </a>
@@ -417,7 +434,7 @@
                 <div>
                   <h4 class="mb-[5px] capitalize">
                     <a class="font-semibold leading-4 tracking-tighter ease-in duration-200 hover:text-orange-500"
-                      href="#">Five ways elevate
+                      href="./post-one.html">Five ways elevate
                       your employees
                       workplace</a>
                   </h4>
@@ -433,7 +450,7 @@
                 <div>
                   <h4 class="mb-[5px] capitalize">
                     <a class="font-semibold leading-4 tracking-tighter ease-in duration-200 hover:text-orange-500"
-                      href="#">Lead Generation and Your coworking Marketing Strategy</a>
+                      href="./post-one.html">Lead Generation and Your coworking Marketing Strategy</a>
                   </h4>
                   <div class="flex items-center">
                     <time class="text-[14px] text-neutral-600 ease-in duration-200 hover:text-orange-500"
@@ -446,7 +463,7 @@
                 <div>
                   <h4 class="mb-[5px] capitalize">
                     <a class="font-semibold leading-4 tracking-tighter ease-in duration-200 hover:text-orange-500"
-                      href="#">Health management firm scales its operations with a managed</a>
+                      href="./post-one.html">Health management firm scales its operations with a managed</a>
                   </h4>
                   <div class="flex items-center">
                     <time class="text-[14px] text-neutral-600 ease-in duration-200 hover:text-orange-500"
@@ -459,7 +476,7 @@
                 <div>
                   <h4 class="mb-[5px] capitalize">
                     <a class="font-semibold leading-4 tracking-tighter ease-in duration-200 hover:text-orange-500"
-                      href="#">Easy ways to implement wellbeing programs</a>
+                      href="./post-one.html">Easy ways to implement wellbeing programs</a>
                   </h4>
                   <div class="flex items-center">
                     <time class="text-[14px] text-neutral-600 ease-in duration-200 hover:text-orange-500"
@@ -472,7 +489,7 @@
                 <div>
                   <h4 class="mb-[5px] capitalize">
                     <a class="font-semibold leading-4 tracking-tighter ease-in duration-200 hover:text-orange-500"
-                      href="#">Premium custom office solution solves Growfusely's growing</a>
+                      href="./post-one.html">Premium custom office solution solves Growfusely's growing</a>
                   </h4>
                   <div class="flex items-center">
                     <time class="text-[14px] text-neutral-600 ease-in duration-200 hover:text-orange-500"
