Added contact page with it's responsive

--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,8 @@
                   href="index.html">Home</a>
               </li>
               <li class="header-nav-item">
-                <a class="header-nav-link font-semibold text-sm uppercase hover:text-amber-400" href="#">About
+                <a class="header-nav-link font-semibold text-sm uppercase hover:text-amber-400"
+                  href="./about.html">About
                   us</a>
               </li>
               <li class="header-nav-item">
@@ -56,7 +57,8 @@
                 <a class="header-nav-link font-semibold text-sm uppercase hover:text-amber-400" href="#">Blog</a>
               </li>
               <li class="header-nav-item">
-                <a class="header-nav-link font-semibold text-sm uppercase hover:text-amber-400" href="#">Contact
+                <a class="header-nav-link font-semibold text-sm uppercase hover:text-amber-400"
+                  href="./contact.html">Contact
                   us</a>
               </li>
               <li class="header-nav-item hidden xl:block">
@@ -528,7 +530,8 @@
             <li class="mr-16">
               <ul>
                 <li class="mb-3">
-                  <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="#">Contact us</a>
+                  <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white"
+                    href="./contact.html">Contact us</a>
                 </li>
                 <li class="mb-3">
                   <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="#">Report a bug</a>
@@ -555,7 +558,8 @@
                   <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="#">Careers</a>
                 </li>
                 <li class="mb-3">
-                  <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="#">Home</a>
+                  <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white"
+                    href="./index.html">Home</a>
                 </li>
                 <li class="mb-3">
                   <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="#">Our blog</a>
