--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               </li>
               <li class="header-nav-item">
                 <a class="header-nav-link font-semibold text-sm lg:text-white uppercase hover:text-amber-400"
-                  href="#">Contact
+                  href="./contact.html">Contact
                   us</a>
               </li>
               <li class="header-nav-item header-end-link">
@@ -1130,7 +1130,8 @@
             <li class="mr-16">
               <ul>
                 <li class="mb-3">
-                  <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="#">Contact us</a>
+                  <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white"
+                    href="./contact.html">Contact us</a>
                 </li>
                 <li class="mb-3">
                   <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="#">Report a bug</a>
