--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Internet - About us</title>
+  <title>Internet - Contact</title>
   <!-- <link rel="stylesheet" href="./assets/css/main.css"> -->
   <link rel="stylesheet" href="./assets/css/main.min.css">
   <link rel="stylesheet" href="./vender/dist/main.css">
@@ -37,7 +37,8 @@
                   href="index.html">Home</a>
               </li>
               <li class="header-nav-item">
-                <a class="header-nav-link font-semibold text-sm uppercase hover:text-amber-400" href="#">About
+                <a class="header-nav-link font-semibold text-sm uppercase hover:text-amber-400"
+                  href="./about.html">About
                   us</a>
               </li>
               <li class="header-nav-item">
@@ -57,8 +58,7 @@
                   href="./blog.html">Blog</a>
               </li>
               <li class="header-nav-item">
-                <a class="header-nav-link font-semibold text-sm uppercase hover:text-amber-400"
-                  href="./contact.html">Contact
+                <a class="header-nav-link font-semibold text-sm uppercase hover:text-amber-400" href="#">Contact
                   us</a>
               </li>
               <li class="header-nav-item hidden xl:block">
@@ -97,149 +97,121 @@
     </div>
   </header>
 
-  <!-- About main -->
-  <main class="main">
-    <!-- About hero section -->
-    <section class="about-hero pt-5 md:pt-14 lg:pt-44">
+  <!-- Site main -->
+  <main>
+    <section class="pt-5 md:pt-14 lg:pt-44">
       <div class="text-center">
-        <h1 class="font-semibold text-4xl leading-[70px] md:text-6xl">About us</h1>
-        <ul class="flex justify-center items-center pt-5">
-          <li class="about-hero-link-item uppercase font-semibold">
+        <h1 class="font-semibold text-4xl leading-[70px] md:text-6xl">Contact us</h1>
+        <ul class="flex justify-center items-center gap-x-3 pt-5">
+          <li class="uppercase font-semibold">
             <a href="index.html">Home</a>
           </li>
-          <li class="about-hero-link-item uppercase font-semibold">
-            <a href="about.html">About us</a>
+          <li class="uppercase font-semibold">
+            <span>-></span>
+          </li>
+          <li class="uppercase font-semibold">
+            <a href="about.html">Contact us</a>
           </li>
         </ul>
       </div>
     </section>
-
-    <!-- Why choose us section -->
-    <section class="choice py-[50px] lg:py-[100px]">
-      <div class="container mx-auto px-4 lg:px-20">
-        <div class="xl:flex xl:items-center">
-          <div class="max-w-[663px] mb-5 mx-auto md:mb-10 xl:mb-0 xl:mx-0">
-            <img class="xl:max-w-[663px] max-h-[500px]" src="./assets/images/about-choise.webp"
-              alt="Women working on laptop" width="663" height="500">
-          </div>
-
-          <div class="xl:pr-10 xl:pl-[100px]">
-            <h2 class="mb-3 font-bold text-xl uppercase md:text-2xl xl:mb-5 xl:text-3xl xl:leading-10">We offer expert
-              SEO and
-              marketing.
-            </h2>
-            <p class="mb-5 font-semibold text-neutral-500 xl:text-xl">
-              We are a team of young, experienced developers who are passionate about their work. Years of cooperation
-              with both corporations.
+    <section class="pt-[60px] pb-[40px] md:pb-[60px] lg:pt-[100px] lg:pb-[80px]">
+      <div class="container mx-auto px-4 2xl:px-20">
+        <div class="grid grid-cols-1 md:grid-cols-2">
+          <div>
+            <h4 class="mb-[5px] font-semibold text-[13px] leading-5 tracking-wider uppercase text-black">Contact with us
+            </h4>
+            <h2 class="mb-2 text-[32px] leading-10 md:text-[40px] md:leding-[46px] lg:text-[50px] lg:leading-[60px]">
+              Feel free to get in
+              touch with
+              experts</h2>
+            <p class="mb-7 text-neutral-500">
+              Trusted by more than 4,200 customers
             </p>
-            <ul class="mb-6 pl-4 list-disc">
-              <li class="choice-link-item">
-                <span class="block mb-[10px] font-semibold text-lg">Perfect for large sites agencies</span>
+            <ul class="flex items-center gap-x-6">
+              <li>
+                <a href="https://www.facebook.com/" target="_blank">
+                  <i class="fa-brands fa-square-facebook text-xl text-neutral-500"></i>
+                </a>
               </li>
-              <li class="choice-link-item">
-                <span class="font-semibold text-lg">We appreciate your trust greatly</span>
+              <li>
+                <a href="https://twitter.com/" target="_blank">
+                  <i class="fa-brands fa-twitter text-xl text-neutral-500"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/" target="_blank">
+                  <i class="fa-brands fa-instagram text-xl text-neutral-500"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank">
+                  <i class="fa-brands fa-youtube text-xl text-neutral-500"></i>
+                </a>
               </li>
             </ul>
-            <a class="inline-block py-4 px-10 font-semibold uppercase text-sm text-white bg-slate-800 transition-all duration-300 hover:bg-amber-500"
-              href="#">Contact
-              us</a>
           </div>
+          <form class="pt-[30px] pr-[30px] pb-[25px] pl-[15px] md:py-0 md:pr-[30px] md:pl-[50px] lg:pr-0 lg:pl-[100px]"
+            action="#">
+            <div>
+              <div class="md:flex md:gap-x-5">
+                <input
+                  class="w-full mb-10 p-[15px] font-semibold text-sm text-black bg-transparent border-solid border-2 border-neutral-200"
+                  name="userFullName" type="text" placeholder="Full name" required>
+                <input
+                  class="w-full mb-10 p-[15px] font-semibold text-sm text-black bg-transparent border-solid border-2 border-neutral-200"
+                  name="userEmail" type="email" placeholder="Email Address" required>
+              </div>
+              <textarea
+                class="w-full mb-10 p-[15px] font-semibold text-sm text-black bg-transparent border-solid border-2 border-neutral-200"
+                name="userComment" rows="4" placeholder="Write message" required></textarea>
+              <button
+                class="py-[15px] px-[35px] font-semibold text-sm uppercase text-white bg-black ease-in duration-200 hover:bg-orange-600"
+                type="submit">Post
+                comment</button>
+            </div>
+          </form>
         </div>
       </div>
     </section>
-
-    <!-- Who we are section -->
-    <section class="py-[45px] bg-white xl:py-[60px]">
-      <div class="container mx-auto px-4 lg:px-20">
-        <div class="xl:flex xl:justify-between xl:items-center">
-          <div class="mb-5 mx-auto xl:max-w-[700px] md:text-center xl:mb-0 xl:mx-0 xl:text-left">
-            <h3 class="mb-3 font-bold text-xl uppercase md:text-2xl xl:mb-5 xl:text-3xl">Our people come first</h3>
-            <p class="font-semibold text-neutral-500 xl:text-xl">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod facilis voluptas dolorum, non eius nam
-              quam
-              suscipit deleniti impedit architecto magni nobis corporis, velit hic? Perferendis soluta odit, magnam
-              totam
-              optio assumenda accusantium veritatis. Numquam impedit iure distinctio pariatur cupiditate repellendus
-              incidunt asperiores facilis architecto soluta ex facere maiores, quisquam dicta quas ab voluptatibus iusto
-              perferendis molestiae. Quam perspiciatis, illum facilis error officiis inventore ducimus culpa. Obcaecati
-              sint labore.
-            </p>
-          </div>
-          <img class="mx-auto xl:max-w-[630px] xl:min-h-[400px] xl:mx-0" src="./assets/images/who-we-are.jpg" alt=""
-            width="630" height="360">
-        </div>
-      </div>
-    </section>
-
-    <!-- Our founding section -->
-    <section class="py-[45px] xl:py-[50px]">
-      <div class="container  mx-auto px-4 xl:px-20">
+    <hr>
+    <section class="pt-[60px] pb-[50px] md:pt-[80px] md:pb-[100px]">
+      <div class="container mx-auto px-4 2xl:px-20">
         <div>
-          <h3 class="mb-3 font-bold text-xl text-center uppercase md:text-2xl xl:mb-5 xl:text-3xl">Our founding</h3>
-          <p class="font-semibold text-neutral-500 text-justify xl:text-xl">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit doloribus corrupti fugiat voluptatibus? Quis
-            quos id illo molestias delectus ullam quia dicta a qui tempore cumque enim suscipit, ex nobis provident
-            explicabo dolores necessitatibus maxime esse in aut. Voluptatem ipsum illum neque, quae repellendus
-            excepturi. Mollitia aliquid, similique exercitationem id incidunt necessitatibus, perspiciatis ipsa autem
-            architecto adipisci officia accusantium hic maxime magnam neque libero? Odit voluptatum eaque eum omnis
-            voluptatibus possimus mollitia magni tenetur in! Numquam a blanditiis praesentium molestiae quam dolorem
-            tempora provident modi minus, magnam quos odit inventore quas earum eius. Velit sint quibusdam placeat rem
-            quidem ea est, nihil aspernatur beatae rerum sit. Reiciendis dolor blanditiis eligendi corporis nemo.
-            Consequuntur at eum ipsa maiores cum! Minus omnis, eaque quas quia commodi sint ea exercitationem soluta
-            ullam adipisci aperiam? Deleniti distinctio omnis delectus expedita facilis labore corporis ipsam odit
-            voluptates recusandae, quaerat voluptatem voluptatum aut atque, officiis, adipisci commodi natus rerum ipsum
-            repellat architecto ut beatae. Voluptatem nostrum eos minima, placeat, accusantium alias, minus sunt quae
-            possimus natus omnis beatae facere iste consequatur adipisci ratione aut quia aliquid. Quidem, non ullam hic
-            saepe repellat molestiae beatae. Dolor necessitatibus asperiores error eaque, beatae sint provident corrupti
-            pariatur quod fugiat.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Our team section -->
-    <section class="py-10 bg-white xl:py-[60px]">
-      <div class="container mx-auto px-4 xl:px-20">
-        <div>
-          <div class="mb-7 text-center">
-            <h4 class="mb-1 font-bold text-[13px] leading-5 uppercase">Our team</h4>
-            <h2 class="text-2xl capitalize md:text-3xl xl:text-[50px] xl:leading-[60px]">Our expert advisor</h2>
-          </div>
-          <ul
-            class="grid grid-cols-1 text-center gap-x-5 md:grid-cols-2 lg:grid-cols-3 lg:text-left xl:grid-cols-5 xl:justify-between">
-            <li class="max-w-[260px] mx-auto w-full mb-5 xl:mb-0">
-              <img class="mb-4 max-w-[260px] max-h-[340px]" src="./assets/images/michael.jpg"
-                alt="Michael Daniel is a Project manager" width="350" height="340">
-              <h3 class="font-medium text-[26px] leading-9 capitalize">Michael daniel</h3>
-              <p class="font-semibold capitalize text-neutral-500">Project manager</p>
+          <ul class="grid grid-cols-1 md:grid-cols-3 items-center">
+            <li class="contact-item md:flex md:items-center">
+              <i
+                class="contact-icon fa-solid fa-location-dot mb-6 py-5 px-6 text-[30px] text-neutral-800 bg-slate-200 md:mr-6 md:mb-0"></i>
+              <div>
+                <p class="text-neutral-500 capitalize">Visit our store</p>
+                <h5 class="mb-2 font-semibold text-lg leading-7">66 Road Broklyn Street, New York</h5>
+              </div>
             </li>
-            <li class="max-w-[260px] mx-auto w-full mb-5 xl:mb-0">
-              <img class="mb-4 max-w-[260px] max-h-[340px]" src="./assets/images/eliana.jpg"
-                alt="Eliana Ivy is a General manager" width="350" height="340">
-              <h3 class="font-medium text-[26px] leading-9 capitalize">Eliana ivy</h3>
-              <p class="font-semibold capitalize text-neutral-500">General manager</p>
+            <li class="contact-item md:flex md:items-center">
+              <i
+                class="contact-icon fa-solid fa-envelope mb-6 py-5 px-6 text-[30px] text-neutral-800 bg-slate-200 md:mr-6 md:mb-0"></i>
+              <div>
+                <p class="text-neutral-500 capitalize">Send email</p>
+                <h5 class="mb-2 font-semibold text-lg leading-7">needhelp@company.com</h5>
+              </div>
             </li>
-            <li class="max-w-[260px] mx-auto w-full">
-              <img class="mb-4 max-w-[260px] max-h-[340px]" src="./assets/images/richard.jpg"
-                alt="Richard Edward is a Digital strategist" width="350" height="340">
-              <h3 class="font-medium text-[26px] leading-9 capitalize">Richard edward</h3>
-              <p class="font-semibold capitalize text-neutral-500">Digital strategist</p>
-            </li>
-            <li class="max-w-[260px] mx-auto w-full">
-              <img class="mb-4 max-w-[260px] max-h-[340px]" src="./assets/images/derek.jpg"
-                alt="Richard Edward is a Digital strategist" width="350" height="340">
-              <h3 class="font-medium text-[26px] leading-9 capitalize">Derek hale</h3>
-              <p class="font-semibold capitalize text-neutral-500">Back end developer</p>
-            </li>
-            <li class="max-w-[260px] mx-auto w-full">
-              <img class="mb-4 max-w-[260px] max-h-[340px]" src="./assets/images/dylan.png"
-                alt="Richard Edward is a Digital strategist" width="350" height="340">
-              <h3 class="font-medium text-[26px] leading-9 capitalize">Dylan sprayberry</h3>
-              <p class="font-semibold capitalize text-neutral-500">Fron end developer</p>
+            <li class="contact-item md:flex md:items-center">
+              <i
+                class="contact-icon fa-solid fa-phone mb-6 py-5 px-6 text-[30px] text-neutral-800 bg-slate-200 md:mr-6 md:mb-0"></i>
+              <div>
+                <p class="text-neutral-500 capitalize">Call anytime</p>
+                <h5 class="mb-2 font-semibold text-lg leading-7">+ 92 666 888 0000</h5>
+              </div>
             </li>
           </ul>
         </div>
       </div>
+    </section>
+    <section class="pb-2">
+      <iframe class="w-full lg:h-[550px]"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2995.161987240125!2d69.20801829999999!3d41.348832699999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8d2f83e51cc7%3A0x56ad0597bb7e4d0a!2sOliy%20ta&#39;lim%2C%20fan%20va%20innovatsiyalar%20vazirligi!5e0!3m2!1sru!2s!4v1679562689571!5m2!1sru!2s"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
   </main>
 
@@ -267,14 +239,14 @@
             <li class="mr-16">
               <ul>
                 <li class="mb-3">
-                  <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white"
-                    href="./contact.html">Contact us</a>
+                  <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="#">Contact us</a>
                 </li>
                 <li class="mb-3">
                   <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="#">Report a bug</a>
                 </li>
                 <li class="mb-3">
-                  <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="#">About us</a>
+                  <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="./about.html">About
+                    us</a>
                 </li>
                 <li class="mb-3">
                   <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="#">Product</a>
@@ -294,7 +266,8 @@
                   <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="#">Careers</a>
                 </li>
                 <li class="mb-3">
-                  <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="#">Home</a>
+                  <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white"
+                    href="./index.html">Home</a>
                 </li>
                 <li class="mb-3">
                   <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="./blog.html">Our
