--- a/post-one.html
+++ b/post-one.html
@@ -57,7 +57,8 @@
                   href="./blog.html">Blog</a>
               </li>
               <li class="header-nav-item">
-                <a class="header-nav-link font-semibold text-sm uppercase hover:text-amber-400" href="#">Contact us</a>
+                <a class="header-nav-link font-semibold text-sm uppercase hover:text-amber-400"
+                  href="./contact.html">Contact us</a>
               </li>
               <li class="header-nav-item hidden xl:block">
                 <ul class="flex items-center gap-x-5">
@@ -430,7 +431,7 @@
             <li class="mr-16">
               <ul>
                 <li class="mb-3">
-                  <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="#">Contact us</a>
+                  <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="./contact.html">Contact us</a>
                 </li>
                 <li class="mb-3">
                   <a class="font-semibold text-sm text-slate-300 capitalize hover:text-white" href="#">Report a bug</a>
